# modelviewer

./: .gitignore  Cargo.toml  README.md  modelviewer.sublime-project
data/objects/: brick.tga  test2.mtl
data/shaders/: object.hlsl
src/: app.rs  components.rs  gfx.rs  main.rs  numerics.rs
src/app/: application.rs  window.rs
src/components/: modelcs.rs  transformcs.rs
src/gfx/: depth_stencil_target.rs  display.rs  graphics.rs  index_buffer.rs  input_layout.rs  material.rs  mesh.rs  model.rs  model_builder.rs  render_target.rs  render_target_state.rs  sampler.rs  shader.rs  shader_buffer.rs  shader_compiler.rs  shader_input.rs  texture.rs  vertex_buffer.rs  vertex_format.rs
src/numerics/: color.rs
