[package]
name = "gamejam"
version = "0.1.0"
authors = ["Jamie Hayes <strikemedown1981@gmail.com>"]
edition = "2018"

[dependencies]
nalgebra = "0.16"
tobj = "0.1.6"
specs = "0.14.1"
stb_image = "0.2.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = ["winuser", "windef", "winerror", "minwindef", "d3d11", "d3d11sdklayers", "dxgi1_2", "xinput", "d3dcompiler", "debugapi"] }